CICD:#223 laravel.logを出力

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -117,3 +117,6 @@ jobs:
           SESSION_LIFETIME: 120
           SANCTUM_STATEFUL_DOMAINS: localhost
           DISABLE_CSRF: false
+
+      - name: Show Laravel Log
+        run: cat storage/logs/laravel.log
