--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -121,3 +121,11 @@ jobs:
           SESSION_LIFETIME: 120
           SANCTUM_STATEFUL_DOMAINS: localhost
           DISABLE_CSRF: false
+
+      - name: Upload Laravel Log as Artifact
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: laravel-log
+          path: storage/logs/laravel.log
+          retention-days: 1
