CICD:#223 1つのテストだけ実行するようにする

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -102,7 +102,7 @@ jobs:
         run: php artisan migrate
 
       - name: Run Tests
-        run: php artisan test --testsuite=Feature 
+        run: php artisan test --testsuite=Feature --filter=decreaseStockMethodTest
         env:
           APP_ENV: testing
           DB_CONNECTION: mysql
