CICD:#223 storage/logsに777の権限を与え、laravel.logが保存されるようにする

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,7 +63,7 @@ jobs:
           cp .env.example .env
           php artisan optimize
           git config --local core.fileMode false
-          chmod -R 777 storage bootstrap/cache
+          chmod -R 777 storage storage/logs bootstrap/cache
       
       - name: PHP Version
         run: php --version
