--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -120,6 +120,9 @@ jobs:
           SANCTUM_STATEFUL_DOMAINS: localhost
           # DISABLE_CSRF: false
 
+      - name: List Log Files
+        run: ls storage/logs
+
       - name: Upload Laravel Log as Artifact
         if: failure()
         uses: actions/upload-artifact@v4
