CICD:#223 ランナーのいるディレクトリのファイルを表示

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -120,8 +120,8 @@ jobs:
           SANCTUM_STATEFUL_DOMAINS: localhost
           # DISABLE_CSRF: false
 
-      - name: Show Current Directory
-        run: pwd
+      - name: List Files
+        run: ls
 
       - name: List Log Files
         run: ls storage/logs
