CICD:#223 logの名前をdailyの名前に修正

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -121,7 +121,7 @@ jobs:
           # DISABLE_CSRF: false
 
       - name: view laravel.log
-        run: cat storage/logs/laravel.log
+        run: cat storage/logs/laravel-2025-02-04.log
         if: ${{ failure() }}
 
       - name: Current Directory
