--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -143,7 +143,7 @@ jobs:
           # DISABLE_CSRF: false
 
       - name: view laravel.log
-        run: cat storage/logs/laravel-2025-02-04.log
+        run: cat storage/logs/laravel-$(date +'%Y-%m-%d').log
         if: ${{ failure() }}
 
       - name: Current Directory
