--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -130,9 +130,9 @@ jobs:
           DB_CONNECTION: mysql
           DB_HOST: 127.0.0.1
           DB_PORT: 3306
-          DB_DATABASE: ems
-          DB_USERNAME: ems
-          DB_PASSWORD: password
+          DB_DATABASE: ems_testing
+          DB_USERNAME: ems_testing
+          DB_PASSWORD: password123
           SESSION_DRIVER: file
           SESSION_LIFETIME: 120
           SESSION_DOMAIN: localhost
