CICD:#223 npm installをCI環境向けのnpm ciに変更

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,7 +73,7 @@ jobs:
 
       - name: Install npm Dependencies
         if: steps.cache-npm-dependencies.outputs.cache-hit != 'true'
-        run: npm install
+        run: npm ci
 
       - name: Fix npm vulnerabilities
         run: npm audit fix
