CICD:#223 DBの環境変数を.env.testingのものに変更

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,9 +26,9 @@ jobs:
         ports:
           - 3306:3306
         env:
-          MYSQL_DATABASE: 'ems'
-          MYSQL_USER: 'ems'
-          MYSQL_PASSWORD: 'password'
+          MYSQL_DATABASE: 'ems_testing'
+          MYSQL_USER: 'ems_testing'
+          MYSQL_PASSWORD: 'password123'
           MYSQL_ROOT_PASSWORD: 'password'
           MYSQL_ALLOW_EMPTY_PASSWORD: 1
         options: >-
