--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -76,9 +76,19 @@ jobs:
         run: npm ci
 
       - name: Fix npm vulnerabilities
+        if: steps.cache-npm-dependencies.outputs.cache-hit != 'true'
         run: npm audit fix
 
+      - name: Cache build output
+        id: cache-build-output
+        uses: actions/cache@v4
+        with:
+          path: dist
+          key: ${{ runner.os }}-build-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: ${{ runner.os }}-build-
+
       - name: Build Assets
+        if: steps.cache-build-output.outputs.cache-hit != 'true'
         run: npm run build
 
       - name: Laravel Setting
