--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,32 +63,39 @@ jobs:
         with:
           node-version: '22'
 
-      - name: Cache npm dependencies
-        id: cache-npm-dependencies
+      # - name: Cache npm dependencies
+      #   id: cache-npm-dependencies
+      #   uses: actions/cache@v4
+      #   with:
+      #     path: ~/.npm
+      #     key: ${{ runner.os }}-npm-${{ hashFiles('**/package-lock.json') }}
+      #     restore-keys: ${{ runner.os }}-npm-
+
+      - name: Cache node_modules
+        id: cache-node-modules
         uses: actions/cache@v4
         with:
-          path: ./node_modules
-          key: ${{ runner.os }}-npm-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: ${{ runner.os }}-npm-
+          path: node_modules
+          key: ${{ runner.os }}-node-modules-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: ${{ runner.os
 
       - name: Install npm Dependencies
-        if: steps.cache-npm-dependencies.outputs.cache-hit != 'true'
+        if: steps.cache-node-modules.outputs.cache-hit != 'true'
         run: npm ci
 
       - name: Fix npm vulnerabilities
-        if: steps.cache-npm-dependencies.outputs.cache-hit != 'true'
+        if: steps.cache-node-modules.outputs.cache-hit != 'true'
         run: npm audit fix
 
-      - name: Cache build output
-        id: cache-build-output
-        uses: actions/cache@v4
-        with:
-          path: dist
-          key: ${{ runner.os }}-build-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: ${{ runner.os }}-build-
+      # - name: Cache build output
+      #   id: cache-build-output
+      #   uses: actions/cache@v4
+      #   with:
+      #     path: dist
+      #     key: ${{ runner.os }}-build-${{ hashFiles('**/package-lock.json') }}
+      #     restore-keys: ${{ runner.os }}-build-
 
       - name: Build Assets
-        if: steps.cache-build-output.outputs.cache-hit != 'true'
         run: npm run build
 
       - name: Laravel Setting
