--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -77,7 +77,7 @@ jobs:
         with:
           path: node_modules
           key: ${{ runner.os }}-node-modules-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: ${{ runner.os
+          restore-keys: ${{ runner.os }}-node-modules-
 
       - name: Install npm Dependencies
         if: steps.cache-node-modules.outputs.cache-hit != 'true'
