--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -143,7 +143,7 @@ jobs:
 
       - name: Run Tests
         run: |
-          php artisan test --testsuite=Feature --filter=decreaseStockMethodTest
+          php artisan test --testsuite=Feature
           echo "Run tests exited with status $?"
         env:
           APP_ENV: testing
