--- a/.env.testing
+++ b/.env.testing
@@ -7,6 +7,7 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
+LOG_SLACK_WEBHOOK_URL=
 
 DB_CONNECTION=mysql
 DB_HOST=mysql-test
