--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -132,19 +132,12 @@ jobs:
       - name: Clear Configuration Cache
         run: php artisan config:cache
 
-      - name: Verify Application Key
-        run: grep "APP_KEY=" .env
-
-      - name: Display .env Contents
-        run: cat .env
-
       - name: Run Migrate
         run: php artisan migrate
 
       - name: Run Tests
         run: |
           php artisan test --testsuite=Feature
-          echo "Run tests exited with status $?"
         env:
           APP_ENV: testing
           DB_CONNECTION: mysql
@@ -164,24 +157,20 @@ jobs:
 
       - name: view laravel.log
         run: cat storage/logs/laravel-$(date +'%Y-%m-%d').log
-        if: ${{ failure() }}
 
       - name: Current Directory
-        if: failure()
         run: pwd
 
       - name: List Files
-        if: failure()
         run: ls
 
       - name: List Log Files
-        if: failure()
         run: ls storage/logs
 
-      - name: Upload Laravel Log as Artifact
-        if: failure()
-        uses: actions/upload-artifact@v4
-        with:
-          name: laravel-log
-          path: storage/logs/laravel.log
-          retention-days: 1
+      # - name: Upload Laravel Log as Artifact
+      #   if: failure()
+      #   uses: actions/upload-artifact@v4
+      #   with:
+      #     name: laravel-log
+      #     path: storage/logs/laravel.log
+      #     retention-days: 1
