CICD:#223 ciファイルでphp artisan testと変更する

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -133,8 +133,7 @@ jobs:
         run: php artisan migrate
 
       - name: Run Tests
-        run: |
-          php artisan test --testsuite=Feature
+        run: php artisan test
         env:
           APP_ENV: testing
           DB_CONNECTION: mysql
