--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -133,7 +133,7 @@ jobs:
         run: php artisan migrate
 
       - name: Run Tests
-        run: php artisan test
+        run: php artisan test --testsuite=Feature
         env:
           APP_ENV: testing
           DB_CONNECTION: mysql
