--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,6 +53,7 @@ jobs:
         with:
           php-version: 8.2
           tools: composer:v2
+          extensions: xdebug
 
       - name: Cache Vendor
         id: cache-vendor
