--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,29 +72,19 @@ jobs:
         with:
           node-version: '22'
 
-      # - name: Cache npm dependencies
-      #   id: cache-npm-dependencies
-      #   uses: actions/cache@v4
-      #   with:
-      #     path: ~/.npm
-      #     key: ${{ runner.os }}-npm-${{ hashFiles('**/package-lock.json') }}
-      #     restore-keys: ${{ runner.os }}-npm-
-
       - name: Cache node_modules
         id: cache-node-modules
         uses: actions/cache@v4
         with:
-          path: '**/node_modules'
+          path: node_modules
           key: ${{ runner.os }}-node-modules-${{ hashFiles('**/package-lock.json') }}
           restore-keys: ${{ runner.os }}-node-modules-
 
       - name: Install npm Dependencies
         if: steps.cache-node-modules.outputs.cache-hit != 'true'
-        run: npm ci
-
-      - name: Fix npm vulnerabilities
-        if: steps.cache-node-modules.outputs.cache-hit != 'true'
-        run: npm audit fix
+        run: |
+          npm ci
+          npm audit fix
 
       # - name: Cache build output
       #   id: cache-build-output
