--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -131,16 +131,16 @@ jobs:
       - name: Run Migrate
         run: php artisan migrate
 
-      # - name: Run Tests
-      #   run: |
-      #     php artisan config:clear
-      #     php artisan test --testsuite=Feature || exit 0
-
-      - name: Run Tests with Coverage
+      - name: Run Tests
         run: |
           php artisan config:clear
-          php artisan test --testsuite=Feature --stop-on-failure --coverage-text --colors=never > storage/logs/coverage.log || exit 0
-          cat storage/logs/coverage.log
+          php artisan test --testsuite=Feature || exit 0
+
+      # - name: Run Tests with Coverage
+      #   run: |
+      #     php artisan config:clear
+      #     php artisan test --testsuite=Feature --stop-on-failure --coverage-text --colors=never > storage/logs/coverage.log || exit 0
+      #     cat storage/logs/coverage.log
 
       - name: view laravel.log
         if: failure()
