--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -134,21 +134,24 @@ jobs:
       - name: Run Tests with Coverage
         run: |
           php artisan config:clear
-          php artisan test --testsuite=Feature --coverage-text --colors=never > storage/logs/coverage.log
+          php artisan test --testsuite=Feature --coverage-clover=coverage.xml
 
-      - name: view coverage.log
-        run: cat storage/logs/coverage.log
+      - name: Upload coverage report
+        uses: actions/upload-artifact@v2
+        with:
+          name: coverage-report
+          path: coverage.xml
+
+      - name: Codecov
+        uses: codecov/codecov-action@v2
+        with:
+          file: coverage.xml
+          flags: feature
 
       # - name: Run Tests
       #   run: |
       #     php artisan config:clear
       #     php artisan test --testsuite=Feature || exit 0
-
-      # - name: Run Tests with Coverage
-      #   run: |
-      #     php artisan config:clear
-      #     php artisan test --testsuite=Feature --stop-on-failure --coverage-text --colors=never > storage/logs/coverage.log
-      #     cat storage/logs/coverage.log
 
       - name: view laravel.log
         if: failure()
