CICD/自動デプロイの実行条件をpushに変更、paths-ignoreで対象から除外するファイルを追加

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,11 +1,11 @@
 name: EMS Deploy Pipeline
 on:
-  pull_request:  #プルリクのマージ時自動デプロイ
-    types: [closed]
+  push:  #プルリクエストのマージ時自動デプロイ
     branches: 
       - main
-    paths:
-      - '**'
+    paths-ignore:
+      - 'README.md'
+      - 'public/images/**'
 
 env:
   AWS_REGION: ap-northeast-1
