--- a/.env.example
+++ b/.env.example
@@ -1,22 +1,22 @@
 APP_NAME=EMS
 APP_ENV=local
 APP_KEY=
-APP_DEBUG=false
+APP_DEBUG=true
 APP_URL=http://localhost:8000
-APP_PORT=
+APP_PORT=8000
 APP_SERVICE=my-laravel-app
 
-LOG_CHANNEL=stack
+LOG_CHANNEL=local
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
-LOG_SLACK_WEBHOOK_URL=
+LOG_SLACK_WEBHOOK_URL=your-webhook-url-here
 
 DB_CONNECTION=mysql
 DB_HOST=mysql
 DB_PORT=3306
 DB_DATABASE=ems
 DB_USERNAME=ems
-DB_PASSWORD=password123
+DB_PASSWORD=password
 FORWARD_DB_PORT=3306
 
 BROADCAST_DRIVER=log
