--- a/package.json
+++ b/package.json
@@ -23,11 +23,12 @@
         "@vue/tsconfig": "^0.5.1",
         "autoprefixer": "^10.4.12",
         "axios": "^1.3.2",
+        "esbuild": "^0.25.1",
         "laravel-vite-plugin": "^1.0.0",
         "postcss": "^8.4.31",
         "tailwindcss": "^3.2.1",
         "typescript": "^5.6.3",
-        "vite": "^5.0.0",
+        "vite": "^6.2.2",
         "vue": "^3.4.29",
         "vue-tsc": "^2.1.10",
         "ziggy-js": "^2.4.0"
@@ -40,7 +41,7 @@
         "faker": "^5.5.3",
         "micromodal": "^0.4.10",
         "v-tooltip": "^1.1.6",
-        "vitest": "^1.6.0",
+        "vitest": "^3.0.9",
         "vue-chart-3": "^3.1.8",
         "vue-qrcode-reader": "^5.5.10"
     }
