--- a/.github/workflows/cd-eventbridge.yml
+++ b/.github/workflows/cd-eventbridge.yml
@@ -38,5 +38,5 @@ jobs:
         run: |
           aws cloudformation deploy \
             --template-file cloudformation/eventbridge.yml \
-            --stack-name eventbridge-rule-stack \
+            --stack-name ECSLaravelInspectionDisposalEventBridgeRules \
             --capabilities CAPABILITY_NAMED_IAM
