--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -69,6 +69,9 @@ jobs:
           # s3
           echo "S3_BUCKET_URL=${{ secrets.PROD_S3_BUCKET_URL }}" >> .env
 
+          # Userパスワード
+          echo "USER_PASSWORD=${{ secrets.PROD_USER_PASSWORD }}" >> .env
+
       - name: Build Image
         run: docker image build -t temp_portfolio_image:latest .
 
