--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
         "@types/micromodal": "^0.3.5",
         "@types/node": "^22.9.0",
         "@types/ziggy-js": "^1.8.0",
+        "@typescript-eslint/eslint-plugin": "^8.27.0",
+        "@typescript-eslint/parser": "^8.27.0",
         "@vitejs/plugin-vue": "^5.0.0",
         "@vue/babel-plugin-jsx": "^1.2.2",
         "@vue/babel-preset-app": "^5.0.8",
@@ -24,21 +26,27 @@
         "autoprefixer": "^10.4.12",
         "axios": "^1.3.2",
         "esbuild": "^0.25.1",
+        "eslint": "^9.22.0",
+        "eslint-plugin-import": "^2.31.0",
+        "eslint-plugin-vue": "^10.0.0",
         "laravel-vite-plugin": "^1.0.0",
         "postcss": "^8.4.31",
         "tailwindcss": "^3.2.1",
         "typescript": "^5.6.3",
         "vite": "^6.2.2",
         "vue": "^3.4.29",
+        "vue-eslint-parser": "^10.1.1",
         "vue-tsc": "^2.1.10",
         "ziggy-js": "^2.4.0"
     },
     "type": "module",
     "dependencies": {
+        "@heroicons/vue": "^2.2.0",
         "chart.js": "^3.9.1",
         "chartjs-plugin-annotation": "^1.4.0",
         "dompurify": "^3.1.7",
         "faker": "^5.5.3",
+        "lucide-vue-next": "^0.525.0",
         "micromodal": "^0.4.10",
         "v-tooltip": "^1.1.6",
         "vitest": "^3.0.9",
