--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -6,6 +6,7 @@ on:
       - main
     paths:
       - '**'
+  workflow_dispatch:
 
 env:
   AWS_REGION: ap-northeast-1
@@ -22,6 +23,10 @@ jobs:
 # Build
   build-and-push:
     if: github.event.pull_request.merged == true
+    # if: |
+    #   github.event.pull_request.merged == true && 
+    #   contains(github.event.pull_request.labels.*.name, 'deploy') &&
+    #   !contains(github.event.pull_request.title, '[skip ci]')
     runs-on: ubuntu-latest
     defaults:
       run:
