refac: cd.ymlとDockerfileをそれぞれの責務に従いリファクタリング

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -35,6 +35,22 @@ jobs:
       # Checkout code
       - uses: actions/checkout@v4
 
+      # 1) Node を用意
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 22
+          cache: 'npm'
+
+      # 2) Vite用の環境変数（必要なら）を付与してビルド
+      - name: Build front (Vite)
+        env:
+          VITE_APP_URL: ${{ secrets.PROD_VITE_APP_URL }}
+          VITE_API_BASE_URL: ${{ secrets.PROD_VITE_API_BASE_URL }}
+        run: |
+          npm ci
+          npm run build
+
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -47,12 +63,14 @@ jobs:
           cp .env.example .env
           
           # APPの設定
-          # APP_KEYは、イメージビルド時に「php artisan key:generate」を行う
           echo "APP_NAME=EMS" >> .env
           echo "APP_ENV=production" >> .env
           echo "APP_DEBUG=false" >> .env
           echo "APP_URL=${{ secrets.PROD_APP_URL }}" >> .env
           echo "APP_PORT=80" >> .env
+
+          # アプリケーションキーを注入
+          echo "APP_KEY=${{ secrets.PROD_APP_KEY }}" >> .env
 
           # DBの設定
           # AWSから直接取得
@@ -81,6 +99,7 @@ jobs:
           echo "AWS_DEFAULT_REGION=${{ secrets.PROD_AWS_DEFAULT_REGION }}" >> .env
           echo "AWS_BUCKET=${{ secrets.PROD_AWS_BUCKET }}" >> .env
           echo "AWS_URL=${{ secrets.PROD_APP_URL }}" >> .env
+          echo "S3_BUCKET_URL=${{ secrets.PROD_S3_BUCKET_URL }}" >> .env
 
           # ログの設定
           echo "LOG_SLACK_WEBHOOK_URL=${{ secrets.PROD_LOG_SLACK_WEBHOOK_URL }}" >> .env
@@ -91,9 +110,6 @@ jobs:
 
           # SANCTUMの設定
           echo "SANCTUM_STATEFUL_DOMAINS=${{ secrets.PROD_SANCTUM_STATEFUL_DOMAINS }}" >> .env
-
-          # s3
-          echo "S3_BUCKET_URL=${{ secrets.PROD_S3_BUCKET_URL }}" >> .env
 
           # Userパスワード
           echo "GUEST_PASSWORD=${{ secrets.PROD_GUEST_PASSWORD }}" >> .env
