feat:#505 CloudFrontでAPIのSanctum認証が通るように設定を追加

--- a/.env.example
+++ b/.env.example
@@ -24,10 +24,14 @@ CACHE_DRIVER=file
 FILESYSTEM_DISK=public
 QUEUE_CONNECTION=sync
 
-SESSION_DRIVER=file
+SESSION_DRIVER=database
 SESSION_LIFETIME=120
 SESSION_DOMAIN=localhost
 SESSION_COOKIE=my_session_cookie
+
+# 追加 Sanctum認証用
+SESSION_SECURE_COOKIE=true  # HTTPSのときだけCookiegを許可
+SESSION_SAME_SITE=lax  # CSRF対策
 
 MEMCACHED_HOST=127.0.0.1
 
