fix:#505 自動デプロイでfacivonを配置するS3上の場所を変更

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -75,7 +75,7 @@ jobs:
       - name: Upload favicon
         run: |
           aws s3 cp public/favicon.ico \
-            s3://${{ secrets.PROD_AWS_BUCKET }}/storage/favicon.ico \
+            s3://${{ secrets.PROD_AWS_BUCKET }}/favicon.ico \
             --cache-control "public,max-age=86400"
 
       # Terraformでdistribution IDは毎度変化するのでAWS CLIで取得
