--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "require": {
-        "php": "^8.1",
+        "php": "^8.2",
         "ext-gd": "*",
         "ext-imagick": "*",
         "aws/aws-sdk-php": "^3.338",
@@ -15,12 +15,12 @@
         "guzzlehttp/guzzle": "^7.8",
         "hikaeme/monolog-ltsv-formatter": "^3.0",
         "illuminate/filesystem": "*",
-        "inertiajs/inertia-laravel": "^0.6.8",
-        "intervention/image": "*",
+        "inertiajs/inertia-laravel": "^1.0",
+        "intervention/image": "^2.7",
         "jenssegers/agent": "^2.6",
-        "laravel/framework": "^10.0",
-        "laravel/sanctum": "^3.2",
-        "laravel/tinker": "^2.8",
+        "laravel/framework": "^11.0",
+        "laravel/sanctum": "^4.0",
+        "laravel/tinker": "^2.9",
         "league/csv": "^9.18",
         "league/flysystem": "^3.8.0",
         "league/flysystem-aws-s3-v3": "^3.0",
@@ -30,18 +30,17 @@
     },
     "require-dev": {
         "askdkc/breezejp": "^1.8",
-        "doctrine/dbal": "^3.8",
-        "fakerphp/faker": "^1.9.1",
-        "laravel/breeze": "1.29",
+        "doctrine/dbal": "^4.0",
+        "fakerphp/faker": "^1.23",
+        "laravel/breeze": "^2.0",
         "laravel/dusk": "^8.2",
-        "laravel/pint": "^1.0",
-        "laravel/sail": "^1.40",
-        "mockery/mockery": "^1.4.4",
-        "nunomaduro/collision": "^7.0",
+        "laravel/pint": "^1.13",
+        "laravel/sail": "^1.26",
+        "mockery/mockery": "^1.6",
+        "nunomaduro/collision": "^8.1",
         "nunomaduro/larastan": "^2.10",
-        "phpunit/php-code-coverage": "^10.1",
-        "phpunit/phpunit": "^10.0",
-        "spatie/laravel-ignition": "^2.0"
+        "phpunit/phpunit": "^11.0",
+        "spatie/laravel-ignition": "^2.4"
     },
     "autoload": {
         "psr-4": {
@@ -86,6 +85,6 @@
             "pestphp/pest-plugin": true
         }
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "prefer-stable": true
 }
